--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,7 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "my-app/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
-    },
-    {
-      "src": "api/*.js",
-      "use": "@vercel/node"
-    }
-  ],
+  "buildCommand": "cd my-app && npm install && npm run build",
+  "outputDirectory": "my-app/build",
   "routes": [
     {
       "src": "/api/(.*)",
@@ -23,6 +14,7 @@
   ],
   "env": {
     "EMAIL": "@email",
-    "APP_PASSWORD": "@app_password"
+    "APP_PASSWORD": "@app_password",
+    "REACT_APP_API_URL": "@api_url"
   }
 }
