--- a/my-app/package.json
+++ b/my-app/package.json
@@ -28,7 +28,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "npx vercel",
-    "deploy:prod": "npx vercel --prod"
+    "deploy:prod": "npx vercel --prod",
+    "vercel-build": "npm run build"
   },
   "eslintConfig": {
     "extends": [
