--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -15,8 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^7.5.2",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.3",
     "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
